# ObstacleAvoidance

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  LaserSensor.cpp  MotorController.cpp  ObstacleAvoidanceModule.cpp  SensorFusion.cpp  UltrasonicSensor.cpp  main.cpp
doxygen_docs/html/: LaserSensor_8cpp.html  LaserSensor_8cpp__incl.map  LaserSensor_8cpp__incl.md5  LaserSensor_8h.html  LaserSensor_8h__dep__incl.map  LaserSensor_8h__dep__incl.md5  LaserSensor_8h__incl.map  LaserSensor_8h__incl.md5  LaserSensor_8h_source.html  MotorController_8cpp.html  MotorController_8cpp__incl.map  MotorController_8cpp__incl.md5  MotorController_8h.html  MotorController_8h__dep__incl.map  MotorController_8h__dep__incl.md5  MotorController_8h__incl.map  MotorController_8h__incl.md5  MotorController_8h_source.html  ObstacleAvoidanceModule_8cpp.html  ObstacleAvoidanceModule_8cpp__incl.map  ObstacleAvoidanceModule_8cpp__incl.md5  ObstacleAvoidanceModule_8h.html  ObstacleAvoidanceModule_8h__dep__incl.map  ObstacleAvoidanceModule_8h__dep__incl.md5  ObstacleAvoidanceModule_8h__incl.map  ObstacleAvoidanceModule_8h__incl.md5  ObstacleAvoidanceModule_8h_source.html  SensorFusion_8cpp.html  SensorFusion_8cpp__incl.map  SensorFusion_8cpp__incl.md5  SensorFusion_8h.html  SensorFusion_8h__dep__incl.map  SensorFusion_8h__dep__incl.md5  SensorFusion_8h__incl.map  SensorFusion_8h__incl.md5  SensorFusion_8h_source.html  (+64 more)
include/: LaserSensor.h  MotorController.h  ObstacleAvoidanceModule.h  Sensor.h  SensorFusion.h  UltrasonicSensor.h
test/: CMakeLists.txt  main.cpp  test.cpp
(+75 files in other folders)
